# neural-semigroups

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  README.rst  local-build.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  show_report.sh
.circleci/: config.yml
doc/source/: about-data.rst  conf.py  for-developers.rst  getting-started.rst  index.rst  installation.rst  package-documentation.rst
examples/: cayley_database.ipynb  dae-4-colab.ipynb  dae-5.ipynb  dae-8.ipynb  explore-mace-output.ipynb  generate_semigroups.py  guess_tables.ipynb  kernel-metadata.json  reading_data.ipynb  sat_examples.ipynb  semigroups-generation.ipynb  test_model.py  train-dae-on-kaggle.ipynb  train.sh  train_a_model.ipynb  train_classifier.ipynb  train_denoising_autoencoder.py
examples/dae-4/: dae-4.ipynb  kernel-metadata.json
examples/dae-5/: dae-5.ipynb  kernel-metadata.json
examples/dae-6/: dae-6.ipynb  kernel-metadata.json
examples/dae-7/: dae-7.ipynb  kernel-metadata.json
neural_semigroups/: __init__.py  associator_loss.py  cayley_database.py  classifier.py  constant_baseline.py  constants.py  cyclic_group.py  denoising_autoencoder.py  generate_data_with_mace4.py  mace4_semigroups_dataset.py  magma.py  precise_guess_loss.py  semigroups_dataset.py  smallsemi_dataset.py  table_guess.py  training_helpers.py  utils.py
neural_semigroups/datasets/: __init__.py  mace4_semigroups_dataset.py  random_dataset.py  semigroups_dataset.py  smallsemi_dataset.py
scripts/: Semigroups Clustering.ipynb  add_columns_to_mace_output.sql  download_smallsemi.sh  filter_semigroups.py  generate_data.py  generate_data.sh  generate_data_with_mace4.py  generate_semigroups.py  guess_tables.ipynb  parse_mace4_output.py  test_model.py  train_classifier.py  train_denoising_autoencoder.py
tests/: test_associator_loss.py  test_cayley_database.py  test_classifier.py  test_cyclic_group.py  test_denoising_autoencoder.py  test_magma.py  test_precise_guess_loss.py  test_table_guess.py  test_training_helpers.py  test_utils.py
