[tool.poetry]
name = "neural-semigroups"
version = "0.6.3"
description = "Neural networks powered research of semigroups"
authors = ["Boris Shminke <boris@shminke.ml>", "Žarko Bulić"]
license = "Apache-2.0"
repository = "https://github.com/inpefess/neural-semigroups"
documentation = "https://neural-semigroups.readthedocs.io"
readme = "README.rst"
classifiers=[
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Intended Audience :: Science/Research",
	"Development Status :: 7 - Inactive",
	"Environment :: Console",
	"Natural Language :: English",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">= 3.7.1, < 3.10"
torch = "*"
tqdm = "*"
pytorch-ignite = "*"
tensorboard = "*"

[tool.poetry.dev-dependencies]
pylint = "*"
mypy = "*"
rope = "*"
flake8 = "*"
virtualenv = "*"
pytest = "*"
sphinx = "*"
sphinx_rtd_theme = "*"
pytest-cov = "*"
sphinx-autodoc-typehints = "*"
scikit-learn = "*"
pre-commit = "*"
jupyterlab = "*"
ipywidgets = "*"
black = "*"
data-science-types = "*"
vulture = "*"
kaggle = "*"
matplotlib = "*"
jedi = "*"
types-requests = "*"
tomlkit = "*"

[tool.black]
line-length=79

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["neural_semigroups"]
